# tournament-assit

./: CMakeLists.txt  LICENSE  README.md
doc/: Doxyfile.in
inc/: Competitor.hpp  Engine.hpp  Exceptions.hpp
src/: Competitor.cpp  Engine.cpp  Main.cpp
